--- a/.gitignore
+++ b/.gitignore
@@ -34,10 +34,12 @@ MANIFEST
 *.spec
 
 # Installer logs
+geckodriver.log
 pip-log.txt
 pip-delete-this-directory.txt
 
 # Unit test / coverage reports
+include/jogadores.txt
 htmlcov/
 .tox/
 .nox/
