--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,7 @@ pip-log.txt
 pip-delete-this-directory.txt
 
 # Unit test / coverage reports
-include/jogadores.txt
+include/*.txt
 htmlcov/
 .tox/
 .nox/
